--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,12 @@
 {
 	"require": {
 		
-	}
+	},
+	"require-dev": {
+        "phpunit/phpunit": "4.0.*",
+		"behat/behat": "2.4.*@stable"
+    },
+    "config": {
+        "bin-dir": "bin/"
+    }
 }
