--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,13 @@
 		
 	},
 	"require-dev": {
-        "phpunit/phpunit": "4.0.*",
+		"phpunit/phpunit": "4.0.*",
 		"behat/behat": "2.4.*@stable"
-    },
-    "config": {
-        "bin-dir": "bin/"
-    }
+	},
+	"config": {
+		"bin-dir": "bin/"
+	},
+	"autoload": {
+		"psr-4": { "app\\": "app/" }
+	}
 }
